log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:24:55 PM UTC: 
 tests:  0|6
total_score: 0/70
4bfcc3e
Thu 30 Mar 2023 03:34:18 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:26: error: ‘arrayList’ undeclared (first use in this function); did you mean ‘ArrayList’?
   15 |   dato = malloc( sizeof( arrayList));
      |                          ^~~~~~~~~
      |                          ArrayList
arraylist.c:15:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e9d35b0
Thu 30 Mar 2023 03:34:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8f4bc92
Thu 30 Mar 2023 03:34:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:23:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   23 |     return *dato;
      |            ^~~~~
arraylist.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f721c74
Thu 30 Mar 2023 03:35:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fd72c4e
Thu 30 Mar 2023 03:36:10 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:18: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   dato->capacity = NULL;
      |                  ^
arraylist.c:18:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   dato->size = NULL;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
247c384
Thu 30 Mar 2023 03:36:24 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
9b4e251
Thu 30 Mar 2023 03:37:11 PM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
7ac2305
Thu 30 Mar 2023 03:37:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b417eda
Thu 30 Mar 2023 03:37:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:9: error: expected identifier before ‘*’ token
   16 |   dato->**data = malloc( sizeof( void) * 2);
      |         ^
Compilation failed
f06526f
Thu 30 Mar 2023 03:37:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:9: error: expected identifier before ‘*’ token
   16 |   dato->*data = malloc( sizeof( void) * 2);
      |         ^
Compilation failed
21a7851
Thu 30 Mar 2023 03:37:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2446d35
Thu 30 Mar 2023 03:40:49 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ba1e6e7
Thu 30 Mar 2023 03:41:19 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9425cfc
Thu 30 Mar 2023 03:42:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cbb6f5f
Thu 30 Mar 2023 03:42:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
20f5574
Thu 30 Mar 2023 03:43:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0912cdc
Thu 30 Mar 2023 03:43:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2ed89ba
Thu 30 Mar 2023 03:44:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7cfde76
Thu 30 Mar 2023 03:44:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9e763a9
Thu 30 Mar 2023 03:50:42 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3035f20
Thu 30 Mar 2023 03:51:09 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1f07d61
Thu 30 Mar 2023 03:51:22 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
12f930d
Thu 30 Mar 2023 03:54:37 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7f9c654
Thu 30 Mar 2023 03:55:02 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:29: error: dereferencing ‘void *’ pointer [-Werror]
   25 |     l->data[ l->size + 1] = *data;
      |                             ^~~~~
arraylist.c:25:27: error: void value not ignored as it ought to be
   25 |     l->data[ l->size + 1] = *data;
      |                           ^
arraylist.c:31:29: error: dereferencing ‘void *’ pointer [-Werror]
   31 |     l->data[ l->size + 1] = *data;
      |                             ^~~~~
arraylist.c:31:27: error: void value not ignored as it ought to be
   31 |     l->data[ l->size + 1] = *data;
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
b4e57c3
Thu 30 Mar 2023 03:55:13 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3b27a15
Thu 30 Mar 2023 03:55:23 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
7035ba9
Thu 30 Mar 2023 03:55:45 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:30: error: dereferencing ‘void *’ pointer [-Werror]
   25 |     l->data[ l->size + 1] = **data;
      |                              ^~~~~
arraylist.c:25:30: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
Compilation failed
1784bbc
Thu 30 Mar 2023 03:55:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:29: error: dereferencing ‘void *’ pointer [-Werror]
   25 |     l->data[ l->size + 1] = *data;
      |                             ^~~~~
arraylist.c:25:27: error: void value not ignored as it ought to be
   25 |     l->data[ l->size + 1] = *data;
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
855f3e4
Thu 30 Mar 2023 03:55:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1fed39b
Thu 30 Mar 2023 03:56:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6136137
Thu 30 Mar 2023 03:57:13 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
443b303
Thu 30 Mar 2023 03:58:03 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
9543352
Thu 30 Mar 2023 04:07:17 PM UTC: 
 arraylist.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  3|4
total_score: 20/70
9d3365b
Thu 30 Mar 2023 04:07:40 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 20/70
4b58192
Thu 30 Mar 2023 04:10:42 PM UTC: 
 arraylist.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
test.c: In function ‘push’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:66:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   66 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6e2795c
Thu 30 Mar 2023 04:11:23 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘push’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:67:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   67 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5104461
